# vision_tools

./: .gitmodules  CMakeLists.txt  README.md  ReadMe.txt  main.cpp
clients/: http-client.cpp
servers/: image-processor.cpp  image-processor.hpp  sync-server.cpp  sync-server.hpp
